--- a/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn/heat/bundle-trusty-vpn.heat.yml
@@ -12,8 +12,8 @@ parameters:
     type: string
     hidden: true
     constraints:
-      - length: { min: 6, max: 40 }
-        description: COUNTRY must be between 6 and 40 characters
+      - length: { min: 1, max: 40 }
+        description: COUNTRY must be between 1 and 40 characters
 
   PROVINCE:
     description: PROVINCE for the VPN certificate
@@ -21,8 +21,8 @@ parameters:
     type: string
     hidden: true
     constraints:
-      - length: { min: 6, max: 40 }
-        description: PROVINCE must be between 6 and 40 characters
+      - length: { min: 1, max: 40 }
+        description: PROVINCE must be between 1 and 40 characters
 
   CITY:
     description: CITY for the VPN certificate
@@ -30,8 +30,8 @@ parameters:
     type: string
     hidden: true
     constraints:
-      - length: { min: 6, max: 40 }
-        description: CITY must be between 6 and 40 characters
+      - length: { min: 1, max: 40 }
+        description: CITY must be between 1 and 40 characters
 
   ORGANISATION:
     description: ORGANISATION for the VPN certificate
@@ -39,8 +39,8 @@ parameters:
     type: string
     hidden: true
     constraints:
-      - length: { min: 6, max: 40 }
-        description: ORGANISATION must be between 6 and 40 characters
+      - length: { min: 1, max: 40 }
+        description: ORGANISATION must be between 1 and 40 characters
 
   EMAIL:
     description: EMAIL for the VPN certificate
@@ -48,8 +48,8 @@ parameters:
     type: string
     hidden: true
     constraints:
-      - length: { min: 6, max: 40 }
-        description:  EMAIL must be between 6 and 40 characters
+      - length: { min: 1, max: 40 }
+        description:  EMAIL must be between 1 and 40 characters
 
   cw_user_password:
     description: Password for the user named cloudwatt
@@ -57,8 +57,8 @@ parameters:
     type: string
     hidden: true
     constraints:
-      - length: { min: 6, max: 24 }
-        description: Password must be between 6 and 24 characters
+      - length: { min: 4, max: 24 }
+        description: Password must be between 4 and 24 characters
   image:
     type: string
     description: Glance Image
@@ -117,25 +117,25 @@ resources:
     properties:
       floating_network_id: 6ea98324-0f14-49f6-97c0-885d1b8dc517
 
-  set_certificate:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      config:
-        str_replace:
-          template: |
+  #set_certificate:
+  #  type: OS::Heat::SoftwareConfig
+  #  properties:
+  #    config:
+  #      str_replace:
+  ##        template: |
             #!/bin/bash
-            sudo mkdir /etc/vpnconf/
-            echo -n $COUNTRY$ >> /etc/vpnconf/COUNTRY
-            echo -n $PROVINCE$ >> /etc/vpnconf/PROVINCE
-            echo -n $CITY$ >> /etc/vpnconf/CITY
-            echo -n $ORGANISATION$ >> /etc/vpnconf/ORGANISATION
-            echo -n $EMAIL$ >> /etc/vpnconf/EMAIL
-          params:
-            $COUNTRY$: { get_param: COUNTRY }
-            $PROVINCE$: { get_param:PROVINCE }
-            $CITY$: { get_param: CITY }
-            $ORGANISATION$: { get_param: ORGANISATION }
-            $EMAIL$:  { get_param: EMAIL }
+    #        sudo mkdir /etc/vpnconf/
+    #        echo -n $COUNTRY$ >> /etc/vpnconf/COUNTRY
+    ##        echo -n $PROVINCE$ >> /etc/vpnconf/PROVINCE
+      #      echo -n $CITY$ >> /etc/vpnconf/CITY
+      #      echo -n $ORGANISATION$ >> /etc/vpnconf/ORGANISATION
+      #      echo -n $EMAIL$ >> /etc/vpnconf/EMAIL
+      #    params:
+      #      $COUNTRY$: { get_param: COUNTRY }
+      #      $PROVINCE$: { get_param: PROVINCE }
+      #      $CITY$: { get_param: CITY }
+      #      $ORGANISATION$: { get_param: ORGANISATION }
+      #      $EMAIL$:  { get_param: EMAIL }
 
   server:
     type: OS::Nova::Server
@@ -149,8 +149,15 @@ resources:
         - { get_resource: security_group }
       user_data_format: RAW
       user_data:
-        get_resource: set_certificate |
+        str_replace:
+          template: |
             #!/usr/bin/env bash
+            sudo mkdir /etc/vpnconf/
+            echo -n "$COUNTRY$" >> /etc/vpnconf/COUNTRY
+            echo -n "$PROVINCE$" >> /etc/vpnconf/PROVINCE
+            echo -n "$CITY$" >> /etc/vpnconf/CITY
+            echo -n "$ORGANISATION$" >> /etc/vpnconf/ORGANISATION
+            echo -n "$EMAIL$" >> /etc/vpnconf/EMAIL
             echo "$(date) - START" >> /var/log/vpn_srv.log
             export DEBIAN_FRONTEND=noninteractive
             apt-get update 2>&1 >> /var/log/vpn_srv.log
@@ -165,6 +172,13 @@ resources:
             cd /home/cloud/
             git clone  https://github.com/mickaelremilien/CLOUDPATT.git
             sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
+          params:
+            $COUNTRY$: { get_param: COUNTRY }
+            $PROVINCE$: { get_param: PROVINCE }
+            $CITY$: { get_param: CITY }
+            $ORGANISATION$: { get_param: ORGANISATION }
+            $EMAIL$:  { get_param: EMAIL }
+
 
   floating_ip_link:
     type: OS::Nova::FloatingIPAssociation
