--- a/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
@@ -3,11 +3,12 @@
   sudo: true
 
   vars:
-    COUNTRY:  '/etc/vpnconf/COUNTRY'
-    PROVINCE:  '/etc/vpnconf/PROVINCE'
-    CITY: '/etc/vpnconf/CITY'
-    ORGANISATION:'/etc/vpnconf/ORGANISATION'
-    EMAIL:  '/etc/vpnconf/EMAIL'
+    #wp_db_pass: "{{ lookup('password', '/tmp/keystore chars=ascii_letters,digits,hexdigits,punctuation') }}"
+    COUNTRY:  "{{ lookup('file', '/etc/vpnconf/COUNTRY') }}"
+    PROVINCE:  "{{ lookup('file', '/etc/vpnconf/PROVINCE') }}"
+    CITY: "{{ lookup('file', '/etc/vpnconf/CITY') }}"
+    ORGANISATION: "{{ lookup('file', '/etc/vpnconf/ORGANISATION') }}"
+    EMAIL:  "{{ lookup('file', '/etc/vpnconf/EMAIL') }}"
 
   tasks:
     - name: wheezy backports repositories added
