--- a/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
@@ -152,12 +152,12 @@
         group=root
         mode=0755
 
-    - name: Enable firewall with UFW
-      ufw: state=enabled policy=allow
-      sudo: yes
-    - name: Enable firewall with UFW
-      ufw: logging=on
-      sudo: yes
+    #- name: Enable firewall with UFW
+    #  ufw: state=enabled policy=allow
+    #  sudo: yes
+    #- name: Enable firewall with UFW
+    #  ufw: logging=on
+    #  sudo: yes
 
     - name: certificate configuration COUNTRY
       replace:
@@ -194,18 +194,20 @@
         replace='export KEY_EMAIL="{{EMAIL}}"'
       sudo: yes
 
+    - name: setting easy-rsa folder
+      command: sudo chmod 777 /etc/openvpn/easy-rsa/*
     - name: source vars file
-      command: sudo . /etc/openvpn/easy-rsa/vars
+      command: sudo ./etc/openvpn/easy-rsa/vars
     - name: Cleanning all old parameters
-      command: sudo bash /etc/openvpn/easy-rsa/clean-all
+      command: sudo  ./etc/openvpn/easy-rsa/clean-all
     - name: Generate Diffi Hellman parameters
       command: sudo openssl dhparam -out /etc/ssl/certs/dh2048.pem 2048 creates=/etc/ssl/certs/dh2048.pem
     - name: Building Certificate Authority
-      command: sudo bash /etc/openvpn/easy-rsa/build-ca
+      command: sudo ./etc/openvpn/easy-rsa/pkitool --initca
     - name: Building server keys
-      command: sudo bash /etc/openvpn/easy-rsa/build-key-server server
+      command: sudo bash /etc/openvpn/easy-rsa/pkitool --server server
     - name: Building client keys
-      command: sudo bash /etc/openvpn/easy-rsa/build-key client1
+      command: sudo bash /etc/openvpn/easy-rsa/pkitool client1
 
     - name: Moving server key ca.crt
       copy:
