--- a/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
@@ -201,22 +201,30 @@
         mode: 777
         recurse: yes
       sudo: yes
-     
 
-    - name: change to root 
-      shell: sudo su 
-    - name: Generate Diffi Hellman parameters
-      command: sudo openssl dhparam -out /etc/ssl/certs/dh2048.pem 2048 creates=/etc/ssl/certs/dh2048.pem
-    - name: source vars file
-      shell: . /etc/openvpn/easy-rsa/vars
-    - name: Cleanning all old parameters
-      shell:  bash /etc/openvpn/easy-rsa/clean-all
-    - name: Building Certificate Authority
-      shell:  bash /etc/openvpn/easy-rsa/pkitool --initca
-    - name: Building server keys
-      shell:  bash /etc/openvpn/easy-rsa/pkitool --server server
-    - name: Building client keys
-      shell:  bash /etc/openvpn/easy-rsa/pkitool client1
+    - name: generate openvpn conf
+        chdir: /etc/openvpn/easy-rsa
+        executable: /bin/bash
+      shell:
+        . vars
+        ./clean-all
+        ./build-dh
+        ./pkitool --initca
+        ./pkitool --server server
+        ./pkitool client1
+
+    #- name: Generate Diffi Hellman parameters
+    #  command: sudo openssl dhparam -out /etc/ssl/certs/dh2048.pem 2048 creates=/etc/ssl/certs/dh2048.pem
+    #- name: source vars file
+    #  shell: . /etc/openvpn/easy-rsa/vars
+    #- name: Cleanning all old parameters
+    #  shell:  bash /etc/openvpn/easy-rsa/clean-all
+    #- name: Building Certificate Authority
+    #  shell:  bash /etc/openvpn/easy-rsa/pkitool --initca
+    #- name: Building server keys
+    #  shell:  bash /etc/openvpn/easy-rsa/pkitool --server server
+    #- name: Building client keys
+    #  shell:  bash /etc/openvpn/easy-rsa/pkitool client1
 
     - name: Moving server key ca.crt
       copy:
