--- a/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/bootstrap.yml
@@ -203,7 +203,7 @@
       sudo: yes
 
     - name: generate openvpn conf
-      args; 
+      args: 
         chdir: /etc/openvpn/easy-rsa
         executable: /bin/bash
       shell:
