--- a/image-factory/bundle-trusty-vpn2/ansible/roles/vpn_static/files/server.conf
+++ b/image-factory/bundle-trusty-vpn2/ansible/roles/vpn_static/files/server.conf
@@ -1,19 +1,19 @@
 port 1194
 proto udp
 dev tun
-ca /etc/openvpn/easy-rsa/keys/ca.crt
-cert /etc/openvpn/easy-rsa/keys/server.crt
-key /etc/openvpn/easy-rsa/keys/server.key
-dh /etc/openvpn/easy-rsa/keys/dh2048.pem
+ca /etc/openvpn/ca.crt
+cert /etc/openvpn/server.crt
+key /etc/openvpn/server.key
+dh dh2048.pem
 server 172.1.1.0  255.255.255.0
 ifconfig-pool-persist ipp.txt
-push "route 10.42.42.0 255.0.0.0"
+push "route 10.0.1.0 255.255.255.0"
 keepalive 10 120
 tls-auth /etc/openvpn/ta.key 0
 cipher AES-256-CBC
 comp-lzo
-user nobody
-group nobody
+user cloud
+group cloud
 persist-key
 persist-tun
 status        openvpn-status.log
