fix role bootstarp3

--- a/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static/tasks/main.yml
+++ b/image-factory/bundle-trusty-vpn/ansible/roles/vpn_static/tasks/main.yml
@@ -239,7 +239,7 @@
 
 - name: pack config client
   args:
-    chdir: /etc/openvpn/easy-rsa/keys
+    chdir: /etc/openvpn/
     executable: /bin/bash
   shell: |
     sudo mkdir configclient
