--- a/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
+++ b/image-factory/bundle-trusty-wordpress2/heat/srv_sql.yaml
@@ -36,6 +36,15 @@ parameters:
   security_groups:
     type: comma_delimited_list
 
+  mysqlpwd:
+    description: Basic auth password for mysql users
+    label: Mysql Auth password
+    type: string
+    hidden: true
+    constraint:
+      - length: { min: 6, max: 24 }
+        description: Password must be between 6 and 24 characters
+
 resources:
 
   security_group:
@@ -70,7 +79,9 @@ resources:
       metadata:
         services: sql
       user_data_format: RAW
-      user_data: |
+      user_data:
+        str_replace:
+          template: |
         #!/usr/bin/env bash
         echo "$(date) - START" >> /var/log/sql_srv.log
         export DEBIAN_FRONTEND=noninteractive
@@ -86,9 +97,11 @@ resources:
         echo "[local]" >> /etc/ansible/hosts
         echo "127.0.0.1 ansible_connection=local" >> /etc/ansible/hosts
         cd /home/cloud
+        echo -n "$mysqlpwd$" >> /home/cloud/mysqlpwd
         git clone  https://github.com/mickaelremilien/CLOUDPATT.git
         sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpress2/ansible/seed-mysql.yml
-
+      params:
+        $mysqlpwd$: { get_param: mysqlpwd }
   volume:
     type: OS::Cinder::Volume
     properties:
